--- a/OldVersions/Desktop.ini/README.ini
+++ b/OldVersions/Desktop.ini/README.ini
@@ -1,18 +1,15 @@
 # Start of script
-
-# Sample INI file
-
 [.ShellClassInfo]
 ConfirmFileOp=0
 NoSharing=1
-IconFile=/
+IconFile=/Whitespace-Language_1024pxIcon_V1_HighCompression.png
 IconIndex=0
-InfoTip="Miscellaneous project from @seanpm2001 [WRITE A BETTER DESCRIPTION HERE"
+InfoTip="The source repository for seanpm2001s experience and knowledge of the Whitespace programming language."
 
 # File info
 
 # File type: Windows INI file [desktop.ini] (*.ini)
-# File version: 1 (2023, Wednesday, May 3rd at 6:09 pm PST)
-# Line count (including blank lines and compiler line): 19
+# File version: 2 (2023, Wednesday, July 12th at 02:37 pm PST)
+# Line count (including blank lines and compiler line): 16
 
 # End of script
